# k8s-snap

./: .gitignore  pending_patch_notices_snap.txt  pending_patch_notices_snap_1.txt  pending_patch_notices_snap_refined.txt  spread.yaml
.github/: .copolit-instructions.md  pull_request_template.md
.github/actions/download-k8s-snap/: action.yaml
.github/workflows/: auto-label-release-notes.yaml  build-snap.yaml  charm-e2e-tests.yaml  check-removed-urls.yml  compare-performance.yaml  docs-spread-pr-simplified.yaml  docs-spread-pr-upstream.yaml  docs-spread-pr.yaml  docs-spread-tests.yaml  docs-spread-weekly.yaml  e2e-tests.yaml  linkcheck.yaml  markdown.yaml  test-docs-spread-pr.sh
docs/: scenarios.yaml  spread.yaml
docs/canonicalk8s/: .gitignore  Makefile  conf-rtd.py  conf.py  custom_conf.py  index.md  redirects.txt  releases.md
docs/src/: .readthedocs.yaml  conf.py  index.md
docs/tools/: build_spread_task.py  check_create_spread_task_file.py  combine_spread_tasks.py  create_spread_task_file.py  development-roadmap.md  docs_validator.py  gather_charm_patch_notices.py  gather_snap_patch_notices.py  patch_notices_prompt.txt  repeat_checks.sh  upstream_create_spread_task_file.py
docs/tools/patch-notices/: PLAN.md  README.md  draft.txt  monthly-review-1.35.md  pyproject.toml
docs/tools/patch-notices/metadata/: patch-metadata.json
docs/tools/patch-notices/patch_notices/: __init__.py  ai.py  cli.py  fetcher.py  state.py  workbook.py
docs/tools/patch-notices/patch_notices.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+114 files in other folders)
