[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-notices"
version = "0.1.0"
description = "Automated patch-notices updater for Canonical Kubernetes"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "openai>=1.30",
    "rich>=13.7",
]

[project.scripts]
patch-notices = "patch_notices.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["patch_notices*"]
